# MyVega

./: .gitignore  CMakeLists.txt  README.md  main.cpp  my_add.cpp
.github/workflows/: static.yml  test.yaml
cmake/: benchmark.cmake  googletest.cmake
doc/: Doxyfile
exe/: CMakeLists.txt
exe/calc/: CMakeLists.txt
exe/calc/src/: calc.cpp
modules/: CMakeLists.txt
modules/add/: CMakeLists.txt
modules/add/bench/: b_Addition.cpp
modules/add/include/MyVega/: add.hpp
modules/add/include/MyVega/add/: Addition.hpp
modules/add/src/: Addition.cpp
modules/add/test/: t_Addition.cpp
modules/multiply/: CMakeLists.txt
modules/multiply/bench/: b_Multiplication.cpp
modules/multiply/include/MyVega/: multiply.hpp
modules/multiply/include/MyVega/multiply/: Multiplication.hpp
modules/multiply/src/: Multiplication.cpp
modules/multiply/test/: t_Multiplication.cpp
tests/: test_add.cpp
